<resources>
    <string name="app_name">CustomCalendar</string>
    <string name="month1">1月</string>
    <string name="month2">2月</string>
    <string name="month3">3月</string>
    <string name="month4">4月</string>
    <string name="month5">5月</string>
    <string name="month6">6月</string>
    <string name="month7">7月</string>
    <string name="month8">8月</string>
    <string name="month9">9月</string>
    <string name="month10">10月</string>
    <string name="month11">11月</string>
    <string name="month12">12月</string>
    <string name="year">"年"</string>
    <string name="today">今天</string>

    <string name="calendar_release_activity">活动</string>
    <string name="calendar_release_sponsor">赞助</string>
    <string name="calendar_day1">SUN</string>
    <string name="calendar_day2">MON</string>
    <string name="calendar_day3">TUE</string>
    <string name="calendar_day4">WEN</string>
    <string name="calendar_day5">THU</string>
    <string name="calendar_day6">FRI</string>
    <string name="calendar_day7">SAT</string>
</resources>
