<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/base_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="bottom"
        android:paddingTop="@dimen/oldcalendar_week_padding">

        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:textColor="@color/base_theme" />
        <!--android:textSize="@dimens/calendar_size_title"-->

        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/base_theme" />
        <!--android:textSize="@dimens/calendar_size_title"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/base_theme" />

        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/base_theme" />
        <!--android:textSize="@dimens/calendar_size_title"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day1"
            android:textColor="@color/text_gray_light"
            />
        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day2"
            android:textColor="@color/text_gray_light"
             />
        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day3"
            android:textColor="@color/text_gray_light"
            />
        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day4"
            android:textColor="@color/text_gray_light"
       />
        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day5"
            android:textColor="@color/text_gray_light"
           />
        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day6"
            android:textColor="@color/text_gray_light"
        />
        <!--android:textSize="@dimens/text_size_small"-->
        <study.rq.com.customcalendar.oldcalendar.TypeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/calendar_day7"
            android:textColor="@color/text_gray_light"
            />
        <!--android:textSize="@dimens/text_size_small"-->
    </LinearLayout>

    <FrameLayout
        android:id="@id/base_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/fragment_oldcalendar_week" />

        <include layout="@layout/fragment_oldcalendar_week" />

        <include layout="@layout/fragment_oldcalendar_week" />

        <include layout="@layout/fragment_oldcalendar_week" />

        <include layout="@layout/fragment_oldcalendar_week" />

        <include layout="@layout/fragment_oldcalendar_week" />

        <include layout="@layout/fragment_oldcalendar_week" />
    </FrameLayout>

    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:src="@drawable/yinying" />-->

</LinearLayout>